# Vibe_Tracing

./: .coverage  .gitignore  CLAUDE.md  README.md  conftest.py  coverage.json  decision_server.py  pyproject.toml
.vibetracing/: agent_claims.json  architecture_constraints.base.json  claim_fingerprints.json  config.json  coverage_baseline.json  human_decisions.json  semantic_audit.json
docs/: architecture_change_log.md  architecture_constraints.json  claude_code_bootstrap.md  input_output_contracts.md  prd.md  task_execution_rules.md  task_list.json
output/: Agile Governance & Traceability Chain Refactoring.md  Architecture_Lock_Bypass.md  Template Format Review.md  VT_boundary_convergence_design.md  VT_boundary_convergence_execution_plan.md  architecture_constraints_baseline_refactor.md  architecture_constraints_refactor_review.md  base_json_report.md  claim_auto_invalidation_layer2_20260609.md  coverage_redesign_20260609.md  dashboard.html  design_phase_audit_report.md  design_phase_audit_report_review.md  directly_staged_items_bug_20260609.md  empty_json_files_analysis.md  evidence_index.json  governance_boundary_20260609.md  run_metadata.json  self_management_gap_analysis.md  tool_execution_association_bug_20260609.md  traceability_graph_architecture.md  traceability_report.json  v3_vs_v4.md  vibe_tracing_workflow.html  vt_architecture_audit.md  vt_code_quality_governance.md  vt_debt_cleanup_20260610.md  vt_debt_cleanup_plan_20260608.md  vt_evolution_v3_evidence_chain_redesign.md  vt_fix_plan_20260610.md  vt_full_lifecycle_analysis.md  vt_governance_gap_fix_plan.md  (+17 more)
(+200 files in other folders)
